--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Mandy Balthasar"
-  avatar           : "profile.png"
+  avatar           : #"profile.png"
   bio              : "Computer Scientist"
   location         :
   employer         :
