--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Mandy Balthasar"
 title_separator          : "-"
 name                     : &name "Mandy Balthasar"
-description              : &description "Postdoc in Political Science"
+description              : &description #"Postdoc in Computer Science"
 url                      : https://jayrobwilliams.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jayrobwilliams/jayrobwilliams.github.io"
