--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Mandy Balthasar"
 title_separator          : "-"
 name                     : &name "Mandy Balthasar"
 description              : &description # "Postdoc in Computer Science"
-url                      : https://balthasar.digital # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://jayrobwilliams.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jayrobwilliams/jayrobwilliams.github.io"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
